hphp/test/zend/good/ext/openssl/tests/008.php.skipif
<?hh
<<__EntryPoint>> function main() {
if (!extension_loaded("openssl")) print "skip";
}
