hphp/test/zend/bad/ext/openssl/tests/openssl_pbkdf2.php.skipif
<?php if (!extension_loaded("openssl") || !function_exists("openssl_pbkdf2")) print "skip"; ?>